--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,6 @@
 		/>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents; font-family: 'IBM Plex Sans Thai', serif">%sveltekit.body%</div>
+		<div style="display: contents; font-family: 'Line Seed Sans TH','IBM Plex Sans Thai', serif">%sveltekit.body%</div>
 	</body>
 </html>
